--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <style>
       .HOME-button {
         background-color: silver;
-        color: rgb(11, 11, 243);
-        border-color: rgb(11, 11, 243);
+        color: rgb(6, 95, 212));
+        border-color: rgb(6, 95, 212));
         border-width: 2px;
         width: 60px;
         height: 30px;
@@ -25,8 +25,8 @@
 
       .HOME-button:hover {
         background-color: silver;
-        color: rgb(11, 11, 243);
-        border-color: rgb(11, 11, 243);
+        color: rgb(6, 95, 212);
+        border-color: rgb(6, 95, 212));
         border-width: 2px;
         width: 60px;
         height: 30px;
