--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@ SUNDA = <font color = "blue" >OPEN </font>( 12PM-10PM )<br></b>
 -EDUCATION - INTERNATIONAL CAMBRIDGE O/L COMPUTAR SCIENCE AND SOFTWARE ENGINEERING AT ARK.</p><br>
 <br>
 <br>
-<p><b><center>THANK YOU FOR VISITING OUR SITE! DON'T FORGET TO CREATE YOUR SITE IN HIGH QUALITY FROM US</center></p></b></font>
+<p><b><center>THANK YOU FOR VISITING OUR WEB SITE! DON'T FORGET TO CREATE YOUR WEB SITE IN HIGH QUALITY FROM US</center></p></b></font>
 
 
   </body>
