--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <style>
       .HOME-button {
         background-color: silver;
-        color: rgb(6, 95, 212));
+        color: rgb(6, 95, 212);
         border-color: rgb(6, 95, 212));
         border-width: 2px;
         width: 60px;
