--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       .HOME-button {
         background-color: silver;
         color: rgb(6, 95, 212);
-        border-color: rgb(6, 95, 212));
+        border-color: rgb(6, 95, 212);
         border-width: 2px;
         width: 60px;
         height: 30px;
@@ -26,7 +26,7 @@
       .HOME-button:hover {
         background-color: silver;
         color: rgb(6, 95, 212);
-        border-color: rgb(6, 95, 212));
+        border-color: rgb(6, 95, 212);
         border-width: 2px;
         width: 60px;
         height: 30px;
